# basketball-video-analyzer

./: .gitignore  .opencodeignore  AGENTS.md  AGENTS_OPTIMIZED.md  CLAUDE.md  CLAUDE_OPTIMIZED.md  CONTEXT_OPTIMIZATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  README.md  progress.md
.beads/: beads.left.jsonl  beads.left.meta.json  deletions.jsonl  issues.jsonl  last-touched  metadata.json
backend/: .dockerignore  Dockerfile.worker  README.md  basketball_analyzer.db-shm  basketball_analyzer.db-wal  debug_tracking.py  diagnose_frame_dropout.py  pyproject.toml  requirements.txt  run_detection_test.py  test_gpu_usage.py  verify_mps_usage.py
backend/alembic/: README.md  env.py
backend/alembic/versions/: 05191b487fe1_initial_migration_with_all_tables.py  3c2f03621f12_add_thumbnail_path_to_videos.py  481788e17285_add_title_description_to_annotations.py  882ba92dc242_add_processing_jobs_table.py  96312ae6fc68_add_processing_batches_table.py  a1b2c3d4e5f6_add_r2_key_to_videos.py  c7d8a3dfd4cb_add_jersey_numbers_table.py  f278c83bdd7b_add_timestamps_to_annotations_table.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: annotations.py  detection.py  game_rosters.py  games.py  players.py  timeline.py  video_upload.py  videos.py
backend/app/ml/: __init__.py  base.py  byte_tracker.py  color_extractor.py  court_detector.py  cv_utils_fallback.py  jersey_ocr.py  legibility_filter.py  norfair_tracker.py  rfdetr_detector.py  sam2_mask_extractor.py  sam2_tracker.py  sam3_detection_pipeline.py  sam3_frame_extractor.py  sam3_jersey_extractor.py  sam3_tracker.py  types.py  yolo_detector.py
backend/app/models/: __init__.py  annotation.py  annotation_video.py  detection.py  game.py  game_roster.py  jersey_number.py  play.py  player.py  processing_batch.py  processing_job.py  video.py
backend/app/schemas/: annotation.py  detection.py  game.py  game_roster.py  player.py  video.py
backend/app/services/: __init__.py  batch_orchestrator.py  batch_processor.py  cloud_job_service.py  detection_pipeline.py  frame_extractor.py  identity_switch_detector.py  jersey_aggregator.py  job_manager.py  job_service.py  r2_storage.py  sam3_detection_pipeline.py  thumbnail_generator.py  timeline_sequencer.py  track_merger.py  video_storage.py
backend/patches/: fix_sam3_torch_compile.sh  fix_sam3_video_text_embeds.sh
backend/scripts/: benchmark_devices.py  check_device.py  download_sam2_model.py  generate_tracking_video.py  sam3_prompt_comparison.py  sam3_tracking_stability_test.py  seed_data.py  start_worker.sh  test_sam3_tracking.py  visualize_sam3_tracking.py  watch_detect.sh
backend/tests/: conftest.py  test_api_annotations.py  test_api_detection.py  test_api_game_rosters.py  test_api_games.py  test_api_players.py  test_api_videos.py  test_color_extractor.py  test_detection_pipeline.py  test_frame_extractor.py  test_identity_switch_detector.py  test_jersey_aggregator.py  test_jersey_ocr.py  test_job_manager.py  test_legibility_filter.py  test_main.py  test_ml_byte_tracker.py  test_ml_yolo_detector.py  test_sam3_config.py  test_sam3_detection_pipeline.py  test_sam3_frame_extractor.py  test_sam3_jersey_extractor.py  test_sam3_tracker.py  test_thumbnail_generator.py
backend/tests/worker/: test_cloud_storage.py
backend/worker/: __init__.py  __main__.py  cli.py  cloud_storage.py  cloud_worker.py  config.py  job_importer.py  job_processor.py  runpod_service.py
(+73 files in other folders)
