[tool.poetry]
name = "basketball-video-analyzer-backend"
version = "0.1.0"
description = "Backend API server for Basketball Video Analyzer"
authors = ["Basketball Video Analyzer Team"]
readme = "README.md"
packages = [{include = "app"}, {include = "scripts"}]

[tool.poetry.scripts]
seed-db = "scripts.seed_data:main"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
aiosqlite = "^0.19.0"
greenlet = "^3.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"
black = "^24.1.1"
ruff = "^0.1.14"
mypy = "^1.8.0"

[tool.poetry.group.video.dependencies]
opencv-python-headless = "^4.9.0"
ffmpeg-python = "^0.2.0"

[tool.poetry.group.ml.dependencies]
torch = ">=2.2.0"
torchvision = ">=0.17.0"
ultralytics = "^8.3.0"
numpy = "<2.0.0"  # ultralytics compatibility

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
